--- a/lilith/src/main/resources/app.properties
+++ b/lilith/src/main/resources/app.properties
@@ -1,4 +1,4 @@
 application.name=${pom.name}
 application.version=${pom.version}
-application.buildNumber=${buildNumber}
+application.revision=${gitRevision}
 application.timestamp=${timestamp}
