--- a/lilith-data/pom.xml
+++ b/lilith-data/pom.xml
@@ -21,6 +21,7 @@
 		<module>eventsource</module>
 		<module>eventsource-xml</module>
 		<module>logging</module>
+		<module>logging-io-test</module>
 		<module>logging-xml</module>
 		<module>logging-xml-serializer</module>
 		<module>logging-protobuf</module>
