--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,15 @@ project(':lilith-data:logging-protobuf').dependencies {
 	testCompile project(':lilith-data:eventsource')
 }
 
+project(':lilith-data:logging-json-serializer').dependencies {
+	compile project(':lilith-data:logging')
+	compile libraries.'sulky-codec'
+	compile libraries.'sulky-io'
+	compile libraries.'jackson-mapper'
+	testCompile project(':lilith-data:logging-io-test')
+	testCompile project(':lilith-data:eventsource')
+}
+
 project(':lilith-data:access').dependencies {
 	compile project(':lilith-data:eventsource')
 	testCompile libraries.'sulky-junit'
